Update privacy-policy and terms-conditions page content. Update dates and charges.

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -53,17 +53,17 @@
 <!--							<li>-->
 <!--								<a [routerLink]="'login-page'">Login</a>-->
 <!--							</li>-->
-<!--							<li>-->
-<!--								<a [routerLink]="'terms-conditions'">Terms & Conditions</a>-->
-<!--							</li>-->
-<!--							<li>-->
-<!--								<a [routerLink]="'privacy-policy'">Privacy Policy</a>-->
-<!--							</li>-->
+							<li>
+								<a [routerLink]="'terms-conditions'">Terms & Conditions</a>
+							</li>
+							<li>
+								<a [routerLink]="'privacy-policy'">Privacy Policy</a>
+							</li>
 						</ul>
 					</div>
-          <h1 class="invisible">Being Healer the best online and in-person therapy and healing service website in 2023</h1>
+          <h1 class="invisible">Being Healer the best online and in-person therapy and healing service website in 2024</h1>
 					<div class="footer-bottom">
-						<p>© 2023 Being Healer | All Rights Reserved.</p>
+						<p>© 2024 Being Healer | All Rights Reserved.</p>
 					</div>
 				</div>
 			</footer>
