--- a/src/app/patients/doctor-profile/doctor-profile.component.html
+++ b/src/app/patients/doctor-profile/doctor-profile.component.html
@@ -82,7 +82,7 @@
                 </li>
                 <li>
                   <i class="far fa-money-bill-alt"></i>
-                  <span> {{ doctorDetails.Price }} per hour</span>
+                  <span> 3000 per hour</span>
                 </li>
               </ul>
             </div>
