--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -21,53 +21,47 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="terms-content">
-                    <div class="terms-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel sodales mauris. Nunc accumsan mi massa, ut maximus magna ultricies et:</p>
-                        <ol>
-                            <li>Integer quam odio, ullamcorper id diam in, accumsan convallis libero. Duis at lacinia urna.</li>
-                            <li>Mauris eget turpis sit amet purus pulvinar facilisis at sed lacus.</li>
-                            <li>Quisque malesuada volutpat orci, accumsan scelerisque lorem pulvinar vitae.</li>
-                            <li>Vestibulum sit amet sem aliquam, vestibulum nisi sed, sodales libero.</li>
-                        </ol>
-                    </div>
-                    <div class="terms-text">
-                        <h4>Aenean accumsan aliquam justo, et rhoncus est ullamcorper at</h4>
-                        <p>Donec posuere dictum enim, vel sollicitudin orci tincidunt ac. Maecenas mattis ex eu elit tincidunt egestas. Vivamus posuere nunc vel metus bibendum varius. Vestibulum suscipit lacinia eros a aliquam. Sed dapibus arcu eget egestas hendrerit.</p>
-
-                        <p>Vivamus consectetur metus at nulla efficitur mattis. Aenean egestas eu odio vestibulum vestibulum. Duis nulla lectus, lacinia vitae nibh vitae, sagittis interdum lacus. Mauris lacinia leo odio, eget finibus lectus pharetra ut. Nullam in semper enim, id gravida nulla.</p>
-
-                        <p>Fusce gravida auctor justo, vel lobortis sem efficitur id. Cras eu eros vitae justo dictum tempor.</p>
-                    </div>
-                    <div class="terms-text">
-                        <h4>Etiam sed fermentum lectus. Quisque vitae ipsum libero</h4>
-                        <p>Phasellus sit amet vehicula arcu. Etiam pulvinar dui libero, vitae fringilla nulla convallis in. Fusce sagittis cursus nisl, at consectetur elit vestibulum vestibulum:</p>
-                        <ul>
-                            <li>Nunc pulvinar efficitur interdum.</li>
-                            <li>Donec feugiat feugiat pulvinar.</li>
-                            <li>Suspendisse eu risus feugiat, pellentesque arcu eu, molestie lorem. </li>
-                            <li>Duis non leo commodo, euismod ipsum a, feugiat libero.</li>
-                        </ul>
-                    </div>
-                    <div class="terms-text">
-                        <h4>pulvinar</h4> 
-                        <p>Sed sollicitudin, diam nec tristique tincidunt, nulla ligula facilisis nunc, non condimentum tortor leo id ex.</p>
-
-                        <p>Vivamus consectetur metus at nulla efficitur mattis. Aenean egestas eu odio vestibulum vestibulum. Duis nulla lectus, lacinia vitae nibh vitae, sagittis interdum lacus. Mauris lacinia leo odio, eget finibus lectus pharetra ut. Nullam in semper enim, id gravida nulla.</p>
-
-                        <p>Donec posuere dictum enim, vel sollicitudin orci tincidunt ac. Maecenas mattis ex eu elit tincidunt egestas. Vivamus posuere nunc vel metus bibendum varius. Vestibulum suscipit lacinia eros a aliquam. Sed dapibus arcu eget egestas hendrerit.Donec posuere dictum enim, vel sollicitudin orci tincidunt ac. Maecenas mattis ex eu elit tincidunt egestas. Vivamus posuere nunc vel metus bibendum varius. Vestibulum suscipit lacinia eros a aliquam. Sed dapibus arcu eget egestas hendrerit.</p>
-                    </div>
-                    <div class="terms-text">
-                        <h4>efficitur</h4>
-
-                        <p>Fusce gravida auctor justo, vel lobortis sem efficitur id. Cras eu eros vitae justo dictum tempor.</p>
-
-                        <p><strong>Vivamus posuere nunc vel metus bibendum varius. Vestibulum suscipit lacinia eros a aliquam. Sed dapibus arcu eget egestas hendrerit.Donec posuere dictum enim, vel sollicitudin orci tincidunt ac.</strong></p>
-                    </div>	
+              <div class="terms-content">
+                <div class="terms-text">
+                  <h3>Privacy Policy</h3>
+                  <p>Welcome to Being Healer's Privacy Policy. We are committed to protecting your privacy and handling
+                    your information in a secure and responsible manner, in compliance with the Health Insurance
+                    Portability and Accountability Act (HIPAA).</p>
                 </div>
+                <div class="terms-text">
+                  <h4>Collection of Information</h4>
+                  <p>We collect personal and health information that you voluntarily provide to us. This includes, but
+                    is not limited to, your name, contact details, and health history.</p>
+                </div>
+                <div class="terms-text">
+                  <h4>Use of Information</h4>
+                  <p>Your information is used to provide you with personalized healing services, process payments, and
+                    improve our services. We will not share your information without your consent, except as required by
+                    law.</p>
+                </div>
+                <div class="terms-text">
+                  <h4>Data Security</h4>
+                  <p>We implement various security measures to ensure the confidentiality and integrity of your
+                    information, including encryption, access controls, and secure storage practices.</p>
+                </div>
+                <div class="terms-text">
+                  <h4>Your Rights</h4>
+                  <p>You have rights regarding your personal and health information, including the right to access,
+                    correct, and request deletion of your data, subject to certain exceptions.</p>
+                </div>
+                <div class="terms-text">
+                  <h4>Changes to Privacy Policy</h4>
+                  <p>We may update this policy from time to time. Any changes will be communicated on this page.</p>
+                </div>
+                <div class="terms-text">
+                  <h4>Contact Us</h4>
+                  <p>If you have any questions or concerns about our privacy practices, please contact us
+                    <a [routerLink]="'/home'" fragment="contactus"> here</a>.</p>
+                </div>
+              </div>
             </div>
         </div>
     </div>
 
-</div>		
+</div>
 <!-- /Page Content -->
