Add about-us and refund pages with routes and footer links

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -36,6 +36,9 @@
 
 						<ul class="footer-nav">
               <li>
+                <a [routerLink]="'about-us'">About us</a>
+              </li>
+              <li>
                 <a [routerLink]="'/home'" [fragment]="'services'">Services</a>
               </li>
 							<li>
@@ -59,6 +62,9 @@
 							<li>
 								<a [routerLink]="'privacy-policy'">Privacy Policy</a>
 							</li>
+              <li>
+                <a [routerLink]="'refund'">Refund Policy</a>
+              </li>
 						</ul>
 					</div>
           <h1 class="invisible">Being Healer the best online and in-person therapy and healing service website in 2024</h1>
