fix services in header

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -145,8 +145,8 @@
 <!--                        </ul>-->
 <!--                    </li>-->
                         <li>
-                          <!-- <a [routerLink]="'/home'" [fragment]="'services'">Services</a> -->
-                            <a [routerLink]="'blog'">Services</a>
+                           <a [routerLink]="'/home'" [fragment]="'services'">Services</a>
+<!--                            <a [routerLink]="'blog'">Services</a>-->
                         </li>
                         <li>
                           <a [routerLink]="'patients/search-doctor'">Healers</a>
